--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset='UTF-8' />
   <link rel='icon' type='image/svg+xml' href='/favicon.png' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta name='description' content='Web Page Make In Vanilla Only CSS3 HTML5' />
   <title>Gaming web - Where you will find the best games</title>
 </head>
 
