--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
   <link rel='icon' type='image/svg+xml' href='/favicon.png' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name='description' content='Web Page Make In Vanilla Only CSS3 HTML5' />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Gaming web - Where you will find the best games</title>
 </head>
 
 <body>
+  <section>
+    <header>
+      <a href='#' class='logo'><img src='/logo.png' alt='logo' /></a>
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </header>
+    <ul class='navigation'>
+      <li class='active'><a href='#'><i class="fa-solid fa-house"></i></a></li>
+      <li><a href='#'><i class="fa-solid fa-fire"></i></a></li>
+      <li><a href='#'><i class="fa-solid fa-gamepad"></i></a></li>
+      <li><a href='#'><i class="fa-solid fa-user"></i></a></li>
+    </ul>
+  </section>
   <div id='app' />
   <script type='module' src='/main.js'></script>
 </body>
