feat: Add images for the carousel and styles

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel='icon' type='image/svg+xml' href='/favicon.png' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name='description' content='Web Page Make In Vanilla Only CSS3 HTML5' />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel='preconnect' href='https://fonts.googleapis.com'>
+  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+  <link href='https://fonts.googleapis.com/css2?family=Open+Sans&display=swap' rel='stylesheet'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css'
+    integrity='sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=='
+    crossorigin='anonymous' referrerpolicy='no-referrer' />
   <title>Gaming web - Where you will find the best games</title>
 </head>
 
@@ -19,13 +19,26 @@
   <section>
     <header>
       <a href='#' class='logo'><img src='/logo.png' alt='logo' /></a>
-      <i class="fa-solid fa-magnifying-glass"></i>
+      <i class='fa-solid fa-magnifying-glass'></i>
     </header>
+    <div class='imgScroll'>
+      <div>
+        <img src='/img1.jpg' alt='Dying light 2 Stay human'>
+        <img src='/img2.jpg' alt='Battlefield 2042'>
+        <img src='/img3.jpg' alt='Cyberpunk 2077'>
+        <img src='/img4.jpg' alt='Deathloop'>
+        <img src='/img5.jpg' alt='Dreamlight valley'>
+        <img src='/img6.jpg' alt='GTA V'>
+        <img src='/img7.jpg' alt='Resident Evil Village'>
+        <img src='/img8.jpg' alt='Saints Row'>
+        <img src='/img9.jpg' alt='Sonic Frontiers'>
+      </div>
+    </div>
     <ul class='navigation'>
-      <li class='active'><a href='#'><i class="fa-solid fa-house"></i></a></li>
-      <li><a href='#'><i class="fa-solid fa-fire"></i></a></li>
-      <li><a href='#'><i class="fa-solid fa-gamepad"></i></a></li>
-      <li><a href='#'><i class="fa-solid fa-user"></i></a></li>
+      <li class='active'><a href='#'><i class='fa-solid fa-house'></i></a></li>
+      <li><a href='#'><i class='fa-solid fa-fire'></i></a></li>
+      <li><a href='#'><i class='fa-solid fa-gamepad'></i></a></li>
+      <li><a href='#'><i class='fa-solid fa-user'></i></a></li>
     </ul>
   </section>
   <div id='app' />
